[gd_scene load_steps=5 format=1]

[ext_resource path="res://Data/Hud_scripts/inventory.gd" type="Script" id=1]
[ext_resource path="res://Data/Hud_scripts/Inventory/tablet.png" type="Texture" id=2]
[ext_resource path="res://Data/Hud_scripts/theme.tres" type="Theme" id=3]
[ext_resource path="res://Data/Hud_scripts/Inventory/tablet_crystal.png" type="Texture" id=4]

[node name="Inventory_hud" type="CanvasLayer"]

layer = 100
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="inventory" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="inventory"]

texture = ExtResource( 2 )
centered = false

[node name="list" type="ItemList" parent="inventory"]

visibility/opacity = 0.8
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 10.0
margin/top = 32.0
margin/right = 140.0
margin/bottom = 242.0

[node name="display_pos" type="Position2D" parent="inventory"]

transform/pos = Vector2( 150, 0 )

[node name="display_pos1" type="Position2D" parent="inventory"]

transform/pos = Vector2( 0, 265 )

[node name="display_pos2" type="Position2D" parent="inventory"]

transform/pos = Vector2( 150, 265 )

[node name="title" type="Label" parent="inventory"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 17.0
margin/right = 145.0
margin/bottom = 32.0
custom_colors/font_color = Color( 0, 0.319061, 0.996094, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="equipped1" type="Label" parent="inventory"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 252.0
margin/right = 150.0
margin/bottom = 266.0
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="equipped2" type="Label" parent="inventory"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 150.0
margin/top = 251.0
margin/right = 300.0
margin/bottom = 265.0
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="animate_crystal" type="Sprite" parent="inventory"]

transform/pos = Vector2( 72, 10 )
texture = ExtResource( 4 )
centered = false


